src/main/frontend/components/container.css
/* ... */
.cp__sidebar-main-content[data-is-full-width='true'] {
  max-width: 100vw;
}

.cp__sidebar-main-content[data-is-margin-less-pages='true'] {
  padding: 0;
}

@supports not (overflow-y: overlay) {
  .scrollbar-spacing {
    overflow-y: auto;
  }
}

@supports (overflow-y: overlay) {
  .scrollbar-spacing {
    overflow-y: overlay;
  }
}

.force-visible-scrollbar {
  &::-webkit-scrollbar {
    -webkit-appearance: none;
  }

  &::-webkit-scrollbar:vertical {
    width: 11px;
  }

  &::-webkit-scrollbar:horizontal {
    height: 11px;
  }

  &::-webkit-scrollbar-thumb {
    border-radius: 8px;
    border: 2px solid var(--ls-primary-background-color, white); /* should match background, can't be transparent */
    background-color: rgba(0, 0, 0, .1);

    &:hover {
      background-color: rgba(0, 0, 0, .4);
    }
  }
}

li.dragging-target {
  border-left: 5px solid green;
}

.full-height-without-header {
  height: calc(100vh - var(--ls-headbar-height) - 4rem);
}

a.ui__modal-close svg, a.close svg, span.rotating-arrow svg {
  color: var(--ls-primary-text-color);
}

a.ui__modal-close, a.close {
  color: var(--ls-primary-text-color);
  opacity: 0.6;
}

a.ui__modal-close:hover, a.close:hover {
  opacity: 1;
}

html[data-theme='dark'] {
  #left-sidebar {
    > .shade-mask {
      background-color: rgba(0, 0, 0, .15);
    }
  }

  .cp__right-sidebar {
    .sidebar-item {
      background-color: var(--lx-gray-03, var(--ls-secondary-background-color));
    }
  }
}

.blocks-selection-mode .page-title,
.blocks-selection-mode .block-content-inner,
.blocks-selection-mode .block-body,
.blocks-selection-mode .ls-properties-area {
  @apply select-none;
}

